# csure

./: .gitignore  CMakeLists.txt  Makefile
clang-tidy/: clang-tidy.patch  notes.txt
clang-tidy/surelogic/: CMakeLists.txt  EmptyDeclCheck.cpp  EmptyDeclCheck.h  FixedCommentCheck.cpp  FixedCommentCheck.h  HeaderFileExtensionsUtils.h  NullStmtCheck.cpp  NullStmtCheck.h  SLDebug.h  SureLogicTidyModule.cpp  UsingCheck.cpp  UsingCheck.h  VoidReturnCheck.cpp  VoidReturnCheck.h
clang-tidy/test/: surelogic-readability-emptydecl.cpp  surelogic-readability-fixed.cpp  surelogic-readability-nullstmt.cpp  surelogic-readability-voidreturn.cpp
csure/: CMakeLists.txt  CSure.cpp  Doxyfile  Makefile  PluginExample.cpp  run_example.sh
csure-example/: run_example.sh  test.c  test.cpp
csure/include/: CMakeLists.txt
csure/lib/: CMakeLists.txt
csure/plugin/: plugin.cc
csure/stuff/: clang.3.7.diffs  clang.380.patch  format-all
csure/tool/: CMakeLists.txt  main.cpp
include/: Makefile
include/Analysis/: CSure.h
include/sl/: CMakeLists.txt
lib/: CMakeLists.txt  CSure.cpp  Makefile
lib/Analysis/: CMakeLists.txt  CSure.cpp  ExampleVisitor.cc  Makefile
lib/Common/: SLUtil.cc
lib/Sea/: CMakeLists.txt  test.cc
lib/Tooling/: CMakeLists.txt  CSureASTConsumer.cc  CSurePreprocessorConsumer.cc  CSureToolAction.cc  tt
plugin/: CMakeLists.txt  Makefile  plugin.cpp
stuff/csure-example/: .project  out  run_example++mac.sh  test.cc  (+5 more)
tool/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt
unittests/Common/: CMakeLists.txt  SLUtilTest.cc
unittests/Sea/: CMakeLists.txt
(+90 files in other folders)
